load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["next.bazel.mjs"])

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = [
        "//contrib/nextjs:__subpackages__",
        "//docs:__subpackages__",
    ],
    deps = [
        "//js:defs",
        "@aspect_bazel_lib//lib:copy_file",
        "@aspect_bazel_lib//lib:copy_to_directory",
        "@aspect_bazel_lib//lib:directory_path",
    ],
)
