load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(["next.bazel.mjs"])

exports_files(
    glob(["*.bzl"]),
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//js:defs",
        "@bazel_lib//lib:copy_file",
        "@bazel_lib//lib:copy_to_directory",
        "@bazel_lib//lib:directory_path",
    ],
)

starlark_doc_extract(
    name = "defs.doc_extract",
    src = "defs.bzl",
    deps = [":defs"],
)
