load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "defs.bzl",
])

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    deps = [
        "@aspect_rules_js//js:defs",
        "@aspect_rules_js//js:providers",
        "@rules_rust_wasm_bindgen//:bzl_lib",
    ],
)
