load("@aspect_rules_js//js:defs.bzl", "js_run_binary", "js_test")
load("@bazel_lib//lib:testing.bzl", "assert_contains")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:jasmine/package_json.bzl", jasmine_bin = "bin")
load("@npm_meaning-of-life__links//:defs.bzl", npm_link_meaning_of_life = "npm_link_imported_package")
load("@other_module//:less.bzl", "lessc")

not_windows = select({
    "@platforms//os:windows": ["@platforms//:incompatible"],
    "//conditions:default": [],
})

npm_link_all_packages(
    imported_links = [
        npm_link_meaning_of_life,
    ],
)

js_test(
    name = "test",
    data = [
        ":node_modules/chalk",
        ":node_modules/meaning-of-life",
    ],
    entry_point = "main.mjs",
)

# Capture the versions of the pnpm binaries resolved by the pnpm module extension
# so :pnpm_versions_test can assert on them.
js_run_binary(
    name = "pnpm_version",
    args = ["--version"],
    stdout = "pnpm_version.txt",
    tool = "@pnpm",
)

js_run_binary(
    name = "other_pnpm_version",
    args = ["--version"],
    stdout = "other_pnpm_version.txt",
    tool = "@other_pnpm//:pnpm",
)

# Run npm via the resolved @pnpm to prove it was bundled (include_npm). This only
# succeeds if npm is on PATH, which requires the version-less include_npm tag to be
# honored even though @pnpm's version comes from a different tag. A package.json must
# be present for `pnpm exec` to run.
js_run_binary(
    name = "pnpm_npm_version",
    srcs = ["package.json"],
    args = [
        "exec",
        "npm",
        "--version",
    ],
    stdout = "pnpm_npm_version.txt",
    tool = "@pnpm",
)

js_test(
    name = "pnpm_versions_test",
    data = [
        "other_pnpm_version.txt",
        "package.json",
        "pnpm_npm_version.txt",
        "pnpm_version.txt",
    ],
    entry_point = "pnpm_versions.test.mjs",
)

lessc(
    name = "styles",
    css = "my.less",
)

assert_contains(
    name = "check_styles",
    actual = "my.css",
    expected = ".box,\n.bar {\n  width: 100px;",
)

jasmine_bin.jasmine_test(
    name = "jasmine_test",
    args = ["*.spec.js"],
    data = ["test.spec.js"],
    # jasmine doesn't know to run without runfiles
    target_compatible_with = not_windows,
)

# Verifies :node_modules targets can be built
build_test(
    name = "node_modules_test",
    targets = [
        ":node_modules",
        ":node_modules/chalk",
        ":node_modules/jasmine",
        ":node_modules/meaning-of-life",
    ],
)

# Verifies :node_modules targets within another module can be built
build_test(
    name = "other_module_linked_packages",
    targets = [
        "@other_module//:node_modules",
        "@other_module//:node_modules/pyright",
        "@other_module//:node_modules/less",
    ],
)

# Verifies that a `js_binary` target from another module can be built
build_test(
    name = "other_module_binary_test",
    targets = ["@other_module//:pyright"],
)

# Verifies that a `js_binary` target from another module can be run
build_test(
    name = "other_module_run_binary_test",
    targets = [
        # js_run_binary() in @other_repo
        "@other_module//:my.css",
        "@other_module//:styles",

        # js_run_binary() with chdir in a subdir of @other_repo
        "@other_module//subdir:my.css",
        "@other_module//subdir:styles",

        # js_run_binary() running a binary in @other_repo
        ":run_other_module_binary_test",
    ],
)

js_run_binary(
    name = "run_other_module_binary_test",
    srcs = ["my.less"],
    outs = ["other-module-my.css"],
    args = [
        "my.less",
        "other-module-my.css",
    ],
    tool = "@other_module//:lessc",  # A js_binary() tool in a different repo
)
