module(
    name = "e2e_bzlmod",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_rules_js", version = "0.0.0")

local_path_override(
    module_name = "aspect_rules_js",
    path = "../..",
)
archive_override(
    module_name = "aspect_bazel_lib",
    integrity = "sha256-wV4722Jpc3KMN173jFj97ifJua/+pcnbV8eOr9qDlb8=",
    patches = ["aspect-bazel-lib.patch"],
    strip_prefix = "bazel-lib-1.13.1",
    urls = "https://github.com/aspect-build/bazel-lib/archive/refs/tags/v1.13.1.tar.gz",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")

npm.npm_import(
    name = "npm_meaning-of-life",
    package = "meaning-of-life",
    version = "1.0.0",
)

use_repo(npm, "npm_meaning-of-life")
use_repo(npm, "npm_meaning-of-life__links")
