load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

npm_link_all_packages(name = "node_modules")

# Test that a package imported directly from a git repository has its
# .git folder removed.
sh_test(
    name = "no_git_tar_test",
    srcs = ["no_git_tar_test.sh"],
    args = [
        "$(rootpaths //:node_modules/highlightjs-ttcn3)",
    ],
    data = [
        ":node_modules/highlightjs-ttcn3",
    ],
)
