load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

js_test(
    name = "test",
    data = [
        ":node_modules/segfault-handler",
    ],
    entry_point = "test.js",
)

write_source_files(
    name = "write_npm_translate_lock_bzlmod",
    files = {
        "snapshots/segfault-handler_defs.bzl": "@npm__segfault-handler__1.3.0__links//:defs.bzl",
    },
)
