# TODO: remove before landing
bazel_dep(name = "aspect_bazel_lib", version = "0.0.0")
archive_override(
    module_name = "aspect_bazel_lib",
    patches = ["//:version.patch"],
    strip_prefix = "bazel-lib-eb6ae4bbc3386ee29aa378c2eebdf0c2dcd759a4",
    urls = ["https://github.com/kormide/bazel-lib/archive/eb6ae4bbc3386ee29aa378c2eebdf0c2dcd759a4.zip"],
)

bazel_dep(name = "aspect_rules_js", version = "0.0.0")
local_path_override(
    module_name = "aspect_rules_js",
    path = "../..",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    data = ["//:package.json"],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    update_pnpm_lock = True,
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
