load("@aspect_rules_js//js:defs.bzl", "js_run_binary")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

js_run_binary(
    name = "run_workspace_bin",
    stdout = "out.txt",
    tool = "@workspace//:bin",
)

build_test(
    name = "test",
    targets = [
        ":run_workspace_bin",
        "@workspace//:run_bin",
    ],
)

# Verify that js_binary and js_test in an external repo with chdir =
# package_name() run in the expected working directory.
test_suite(
    name = "external_tests",
    tests = [
        "@workspace//:js_binary_chdir_test",
        "@workspace//:js_test_chdir_test",
    ],
)
